changes for responsiveness

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <option id="25" value="25">25</option>
                 </select>
             </div>
-            <button>Start</button>
+            <button id="start">Start</button>
         </div>
         <div class="question-page">
         </div>
